<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_by_popularity"
        android:orderInCategory="1"
        android:title="@string/sort_by_popularity"
        app:showAsAction="withText" />
    <item
        android:id="@+id/action_by_top_rated"
        android:orderInCategory="2"
        android:title="@string/sort_by_top_rated"
        app:showAsAction="withText" />

    <item
        android:id="@+id/action_by_favorite"
        android:orderInCategory="3"
        android:title="@string/sort_by_top_favorite"
        app:showAsAction="withText" />

    <item
        android:id="@+id/action_open_settings"
        android:orderInCategory="4"
        android:title="@string/settings_activity"
        app:showAsAction="withText" />
</menu>